@@ -1,7 +1,7 @@
 #!/bin/sh
 cd $(cd ${0%/*} && echo $PWD)
 
-JAVA_OPTS="-Xss256k -Xms64m -Xmx512m -Dfile.encoding=ISO8859-1"
+JAVA_OPTS="-Xss256k -Xms64m -Xmx512m -XX:MaxPermSize=128m -Dfile.encoding=ISO8859-1"
 export JAVA_OPTS
 
 _RUNJAVA=java
